# WorldTravel

./: .gitmodules  LeftPanel.cpp  LeftPanel.h  MainWin.cpp  MainWin.h  README.md  RightPanel.cpp  RightPanel.h  main.cpp
image/: ix
server/: .gitignore  CMakeLists.txt
server/configs/: config_vars.testing.yaml  config_vars.yaml  static_config.yaml
server/postgresql/data/: initial_data.sql
server/postgresql/schemas/: db_1.sql
server/src/: account.hpp  aviasalesAPI.hpp  chatgptAPI.hpp  find.hpp  hello.cpp  login.cpp  login.hpp  main.cpp  registration.cpp  registration.hpp  save_trip.hpp
server/tests/: conftest.py  test_account.py  test_aviasales.py  test_gpt.py  test_login.py  test_mockserver.py  test_registration.py  test_registraton.py  test_save_trip.py
ui/: .gitignore  AccountPanel.cpp  AccountPanel.h  AccountPanel.hpp  CMakeCache.txt  CMakeLists.txt  EnterPanel.cpp  EnterPanel.h  EnterWindow.cpp  EnterWindow.hpp  FindPanel.cpp  FindPanel.h  FindPanel.hpp  LeftPanel.cpp  LeftPanel.h  LeftPanel.hpp  MainWin.cpp  MainWin.h  MainWin.hpp  Makefile  MyExecutable  RegistrationWindow.cpp  RegistrationWindow.hpp  ResultPanel.cpp  ResultPanel.h  ResultPanel.hpp  RightPanel.cpp  RightPanel.h  RoundedButton.cpp  RoundedButton.hpp  SocketMain.cpp  SocketMain.hpp  UserData.cpp  UserData.hpp  cmake_install.cmake  main.cpp
ui/resources/: ic
