cmake_minimum_required(VERSION 3.10)
project(WorldTravel)
set(CMAKE_CXX_STANDARD 20)  
file(GLOB SOURCES "*.cpp")
add_executable(MyExecutable ${SOURCES})
find_package(wxWidgets REQUIRED COMPONENTS net core)
include(${wxWidgets_USE_FILE})
target_link_libraries(MyExecutable ${wxWidgets_LIBRARIES})
file(COPY resources/ic DESTINATION ${CMAKE_BINARY_DIR}/resources)
